# model-training

./: .flake8  .gitignore  .pylintrc  CHANGELOG.md  Dockerfile  LICENSE  Makefile  README.md  bandit.yml  dvc.yaml  pyproject.toml  pytest.ini  requirements.txt  setup.cfg
.dvc/: config
.github/workflows/: build.yml  ci.yml  release-bootstrap.yml  release.yml
data/interim/: .gitignore  data_interim.csv
data/processed/: .gitignore  X_test.csv  features.csv  y_test.csv
metrics/: ml_test_score.json
model-training/: __init__.py  dataset.py  features.py  plots.py
model-training/modeling/: predict.py  train.py
model_training/: __init__.py  config.py  dataset.py  features.py  plots.py  training.py
model_training/data/: c1_BoW_Sentiment_Model.pkl  sentiment_model.pkl
model_training/modeling/: evaluate.py  predict.py  train.py
models/: .gitignore  bow_sentiment_model.pkl
pylint_custom/: ml_pylint.py
pylint_custom/tests/: test_randomness.py
references/: README.md
scripts/: ml_test_score.py  update_readme.py
tests/: conftest.py  test_data.py  test_metamorphic.py  test_model.py
tests/data/: test_data.py
tests/development/: test_data_slices.py  test_metamorphic.py  test_model.py
tests/infrastructure/: test_infrastructure.py
tests/monitoring/: test_monitoring.py
