[flake8]
ignore = E731,E266,E501,C901,W503
max-line-length = 99
exclude = .git,notebooks,references,models,data

[metadata]
name = model-training
version = 0.0.0
description = Service for training the model

[options]
package_dir =
    = model_training
packages = find:
include_package_data = True

[options.packages.find]
where = model_training
